<resources>
    <string name="app_name">NASA Mars Rovers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">By Lukasz Szczepanski</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sol_dialog_title">Select sol:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="sol">Sol: %1$s</string>
    <string name="sol_not_picked">Sol: not selected</string>
    <string name="earth_date">Earth date: %1$s</string>
    <string name="earth_date_not_picked">Earth date: not picked</string>
    <string name="curiosity">Curiosity</string>
    <string name="opportunity">Opportunity</string>
    <string name="spirit">Spirit</string>
    <string name="camera">Camera</string>
    <string name="camera_not_picked">Camera: ALL</string>
    <string name="camera_with_value">Camera: %1$s</string>
    <string name="empty_list_info">No photos for this day, camera or rover</string>
    <string name="value_not_selected">not selected</string>
    <string name="select_camera">"Select camera:"</string>
    <string name="all_cameras">ALL</string>

    <!--    rover's cameras-->
    <string name="FHAZ">FHAZ</string>
    <string name="RHAZ">RHAZ</string>
    <string name="NAVCAM">NAVCAM</string>
    <string name="PANCAM">PANCAM</string>
    <string name="MINITES">MINITES</string>
    <string name="ALL">ALL</string>
    <string name="MAST">MAST</string>
    <string name="CHEMCAM">CHEMCAM</string>
    <string name="MAHLI">MAHLI</string>
    <string name="MARDI">MARDI</string>
</resources>