<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/curiosity_drawer_item"
            android:checkable="true"
            android:title="@string/curiosity" />
        <item
            android:id="@+id/opportunity_drawer_item"
            android:checkable="true"
            android:title="@string/opportunity" />
        <item
            android:id="@+id/spirit_drawer_item"
            android:checkable="true"
            android:title="@string/spirit" />

    </group>

    <item
        android:id="@+id/sol_drawer_item"
        android:title="@string/sol"
        />

    <item
        android:id="@+id/date_drawer_item"
        android:title="@string/earth_date"/>

    <item
        android:id="@+id/camera_drawer_item"
        android:title="@string/camera"/>
</menu>